--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2656,10 +2656,10 @@ p {
     transition: all 0.3s ease-out 0s; }
   .single-portfolio .portfolio-image .portfolio-overlay {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 16px;
+    left: 18px;
+    width: 85%;
+    height: 81%;
     opacity: 0;
     visibility: hidden;
     -webkit-transition: all 0.5s ease-out 0s;
@@ -2667,12 +2667,12 @@ p {
     -ms-transition: all 0.5s ease-out 0s;
     -o-transition: all 0.5s ease-out 0s;
     transition: all 0.5s ease-out 0s;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(115, 191, 241, 0.493);
     -webkit-transform: scale(0.9);
     -moz-transform: scale(0.9);
     -ms-transform: scale(0.9);
     -o-transform: scale(0.9);
-    transform: scale(0.9);
+    transform: scale(0.9); /*50c878*/
     border-radius: 8px; }
     .single-portfolio .portfolio-image .portfolio-overlay .portfolio-content {
       padding: 16px; }
@@ -2682,7 +2682,7 @@ p {
         margin: 0 20px; }
         .single-portfolio .portfolio-image .portfolio-overlay .portfolio-content .portfolio-icon a {
           font-size: 48px;
-          color: #0067f4;
+          color:#fa0800a3;
           position: relative;
           z-index: 5;
           line-height: 50px; }
